# rustyfluid65

./: Cargo.toml  index.html  sources.md
src/: blit.wgsl  gpusims.rs  lib.rs  main.rs  render.wgsl  simulations.rs
src/gpusims/: bitonic4096.wgsl  rotate.rs  rotate.wgsl  sph.rs  sph.wgsl
src/gpusims/radix_sort/: global_scan.wgsl  local_scan.wgsl  scatter.wgsl
src/gpusims/sph/: calc_hash.wgsl  find_range.wgsl  move_and_collide.wgsl  set_acceleration.wgsl  set_density.wgsl  set_normal.wgsl
src/simulations/: rigidbody.rs  rotate.rs  sph.rs
