[package]
name = "rustyfluid65"
version = "0.1.0"
edition = "2024"

# [profile.release]
# strip = true

[dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.24.0", features = [ "derive" ] }
cgmath = "0.18.0"
env_logger = "0.11.8"
flume = "0.12.0"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
log = "0.4.29"
pollster = "0.4.0"
profiling = "1.0.17"
rand = "0.9.2"
rand_distr = "0.5.1"
wgpu = "29.0.1"
wgpu-profiler = "0.27.0"
winit = { version = "0.30.12", features = ["android-native-activity"] }

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "29.0.1", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[[bin]]
name = "rustyfluid65"
path = "src/main.rs"
